@@ -16,6 +16,7 @@ LIB_SRC_CORE_LIST = \
   src/cfg.sh \
   src/version.sh \
   src/info.sh \
+  src/var.sh \
   src/usage.sh \
   src/display.sh \
   src/roll.sh \
