@@ -6,6 +6,7 @@
 -- Add debug output on free sms notif
 -- Log on stderr while it is not prepared
 -- Replace USER of soaf.sh lib by APPLI
+-- New way to display usage and check usage variables
 
 [0.8.1]
 
